--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Sam's Jekyll Blog
 email: huckabaysl@hendrix.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Samantha's Jekyll Blog for Database and Web Systems.
 baseurl:  baseurl "/blog"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: samhuckabay
