--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Sam's Jekyll Blog
 email: huckabaysl@hendrix.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Samantha's Jekyll Blog for Database and Web Systems.
-baseurl:  baseurl "/blog"
+baseurl:  "/blog"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: samhuckabay
 github_username:  huckabaysl
